Add columns and photo of Jerry the cat
Co-authored-by: Jon Stump <jmstump@gmail.com>

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -5,6 +5,23 @@
     <title>[Title]</title>  
   </head>
  
-  <a href="link">[link label]</a> 
+  
+<div class="column">
+  <p>
+  Jerry the cat: Jerry is a very loving and fluffly cat who sometimes scratches at couches. 
+  <img src="dougthecat.jpg" alt="A picture of a cat with a surgical mask."> 
+  </p>
+<div class="column">
+  <p>
+    Doug the dog: Doug is a quiet gentle pupper who wants to lay on the couch all day long. Sadly, he does not like the mail person.
+  </p>
+</div>
+<div class="column">
+ <p>
+  Johnny the dog: Johnny enjoys belly rubs and his tennis ball. He worries that when you leave for the day you may never come back.
+ </p> 
+</div>  
 
+</p>
+</div>
 </html>
