Add font color and style with separate columns
Co-authored-by: Jon Stump <jmstump@gmail.com>

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -4,24 +4,37 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>[Title]</title>  
   </head>
- 
-  
-<div class="column">
-  <p>
-  Jerry the cat: Jerry is a very loving and fluffly cat who sometimes scratches at couches. 
-  <img src="dougthecat.jpg" alt="A picture of a cat with a surgical mask."> 
-  </p>
-<div class="column">
-  <p>
-    Doug the dog: Doug is a quiet gentle pupper who wants to lay on the couch all day long. Sadly, he does not like the mail person.
-  </p>
-</div>
-<div class="column">
- <p>
-  Johnny the dog: Johnny enjoys belly rubs and his tennis ball. He worries that when you leave for the day you may never come back.
- </p> 
-</div>  
+<body> 
+  <h1>Furry Forever Friends</h1>
+    <div class="column">
+      <div class="cat">
+        <p>
+        Jerry the cat: Jerry is a very loving and fluffly cat who sometimes scratches at couches. 
+        <img src="Jerrythecat.jpg" alt="A picture of a cat with a surgical mask."> 
+        </p>
+      </div>
+    </div>
+    <div class="dog">
+      <div class="column">
+        <p>
+        Doug the dog: Doug is a quiet gentle pupper who wants to lay on the couch all day long. Sadly, he does not like the mail person.
+        <img src="Dougthedog.jpg" alt="A picture of a pomeranian with a surgical mask."> 
+        </p>
+      </div>
+      <div class="column">
+        <p>
+        Johnny the dog: Johnny enjoys belly rubs and his tennis ball. He worries that when you leave for the day you may never come back.
+        <img src="Johnnythedog.jpg" alt="A picture of a golden retriever with a surgical mask."> 
+        </p> 
+      </div>
+    </div>
+  <div class="about">
+    <p>
 
-</p>
-</div>
+    </p>
+  </div>  
+
+  </p>
+  </div>
+</body>
 </html>
